2012-07-11  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix. Use DOMStringList instead of DOMString[] for in / out type.

        * testing/Internals.idl:

2012-07-11  Dana Jansens  <danakj@chromium.org>

        [chromium] Minimum size used for occlusion tracking should be a setting on CCLayerTreeHost
        https://bugs.webkit.org/show_bug.cgi?id=90993

        Reviewed by Adrienne Walker.

        Move the default minimum size used for occlusion tracking from the
        CCOcclusionTracker class into CCLayerTreeSettings. This value is then
        used on both threads as the lower limit for any occlusion to be
        remembered.

        This allows us to use (0, 0) as the minimum size for tests, allowing all
        occlusion to be tracked.

        * platform/graphics/chromium/cc/CCLayerTreeHost.cpp:
        (WebCore::CCLayerTreeHost::paintLayerContents):
        * platform/graphics/chromium/cc/CCLayerTreeHost.h:
        (WebCore::CCLayerTreeSettings::CCLayerTreeSettings):
        (CCLayerTreeSettings):
        * platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
        (WebCore::CCLayerTreeHostImpl::calculateRenderPasses):
        * platform/graphics/chromium/cc/CCOcclusionTracker.h:

2012-07-11  Anders Carlsson  <andersca@apple.com>

        Add -Wtautological-compare and -Wsign-compare warning flags
        https://bugs.webkit.org/show_bug.cgi?id=90994

        Reviewed by Mark Rowe.

        * Configurations/Base.xcconfig:

2012-07-11  Dean Jackson  <dino@apple.com>

        TileCache layers have wrong border debug color
        https://bugs.webkit.org/show_bug.cgi?id=90922

        Reviewed by Simon Fraser.

        Commit r122152 updated the layer hierarchy when a tile
        cache is being used by the view. As part of that, GraphicsLayerClient::shouldUseTileCache()
        was changed to return false in some situations (the idea was that it
        should only be called from the createGraphicsLayer method). However